add position colomn for reactive capability point diagram