@@ -245,10 +245,10 @@ public class GeneratorModificationEntity extends InjectionModificationEntity {
             List<ReactiveCapabilityCurveModificationInfos> points) {
         return points == null ? null
                 : points.stream()
-                        .map(point -> new ReactiveCapabilityCurveModificationEmbeddable(point.getMinQ(), point.getOldMinQ(),
+                        .map(point -> new ReactiveCapabilityCurveModificationEmbeddable(point.getPosition(), point.getMinQ(), point.getOldMinQ(),
                                 point.getMaxQ(), point.getOldMaxQ(), point.getP(),
                                 point.getOldP()))
-                        .collect(Collectors.toList());
+                        .toList();
     }
 
     @Override
@@ -260,7 +260,7 @@ public class GeneratorModificationEntity extends InjectionModificationEntity {
         List<ReactiveCapabilityCurveModificationEmbeddable> pointsEmbeddable = !CollectionUtils.isEmpty(reactiveCapabilityCurvePoints) ? reactiveCapabilityCurvePoints : null;
         List<ReactiveCapabilityCurveModificationInfos> points = pointsEmbeddable != null ? getReactiveCapabilityCurvePoints()
                 .stream()
-                .map(value -> new ReactiveCapabilityCurveModificationInfos(value.getMinQ(), value.getOldMinQ(),
+                .map(value -> new ReactiveCapabilityCurveModificationInfos(value.getPosition(), value.getMinQ(), value.getOldMinQ(),
                         value.getMaxQ(), value.getOldMaxQ(),
                         value.getP(), value.getOldP()))
                 .collect(Collectors.toList()) : null;
